Nettoyage du code pour le rendre plus clair et ajout de commentaires

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Layout principal de la fenetre. Il s'agit d'un LinearLayout vertical
+ce qui signifie que tous les éléments vont se suivre de haut en bas-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +10,9 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <!-- Message indiquant si l'application est en train
+    d'enregistrer du son ou est en attente. Le texte est
+    "En attente" au démarrage de l'application -->
     <TextView
         android:id="@+id/intitule"
         android:layout_width="match_parent"
@@ -17,43 +23,67 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:src="@drawable/initial" />
-
+    <!-- Ce layout ne sert qu'à faire en sorte que l'image soit au
+    centre vertical de l'écran (propriété android:gravity="center_vertical").
+    Cependant cela ne fonctionne pas et nous ne savons pas pourquoi -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <!-- Schéma de l'implant cochléaire qui change
+         en fonction de la fréquence détectée -->
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
+            android:src="@drawable/initial" />
+
+    </LinearLayout>
+
+    <!-- Ce layout ne sert qu'à faire en sorte que ce qu'il contient soit
+    en bas de l'écran (propriété android:gravity="bottom").
+    Cependant cela ne fonctionne pas et nous ne savons pas pourquoi -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
         android:orientation="vertical">
 
+        <!-- LinearLayout horizontal pour mettre les boutons sur la même
+        ligne. Nous avons ajouté une marge en haut de 10sp pour ne pas
+        coller les boutons à l'image -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
             android:gravity="center">
 
+            <!-- Bouton start -->
             <ImageButton
                 android:id="@+id/btnStart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:srcCompat="@android:drawable/ic_media_play" />
+                android:src="@android:drawable/ic_media_play" />
 
+            <!-- Bouton stop -->
             <ImageButton
                 android:id="@+id/btnStop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                app:srcCompat="@android:drawable/ic_media_pause" />
+                android:src="@android:drawable/ic_media_pause" />
+
         </LinearLayout>
 
+        <!-- Petit espace de 12sp pour ne pas coller la suite aux boutons -->
         <Space
             android:layout_width="match_parent"
             android:layout_height="12sp" />
 
+        <!-- Texte contenant le type de fréquence captée (Basse,
+        moyenne, haute). Vide au démarrage de l'application -->
         <TextView
             android:id="@+id/typeFrequence"
             android:layout_width="match_parent"
@@ -61,8 +91,10 @@
             android:gravity="center"
             android:textSize="20sp" />
 
+        <!-- Texte contenant la fréquence captée en Hz.
+        Vide au démarrage de l'application -->
         <TextView
-            android:id="@+id/pitchText"
+            android:id="@+id/frequence"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
